--- a/packages/frontend/@n8n/design-system/src/css/_primitives.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_primitives.scss
@@ -30,13 +30,16 @@
 	--p--color--gray-320-a-010: hsla(var(--p--color--gray), 10%, 68%, 0.1);
 	--p--color--gray-70-a-010: hsla(var(--p--color--gray), 32%, 93%, 0.1);
 
-	// White alpha
-	--p--color--white-a-075: hsla(var(--p--color--gray), 50%, 100%, 0.75);
-	--p--color--white-a-030: hsla(var(--p--color--gray), 50%, 100%, 0.3);
-	--p--color--white-a-025: hsla(var(--p--color--gray), 50%, 100%, 0.25);
-	--p--color--white-a-020: hsla(var(--p--color--gray), 50%, 100%, 0.2);
-	--p--color--white-a-015: hsla(var(--p--color--gray), 50%, 100%, 0.15);
-	--p--color--white-a-010: hsla(var(--p--color--gray), 50%, 100%, 0.1);
+	// White
+	--color--white-alpha-100: hsla(220, 1%, 100%, 0.1);
+	--color--white-alpha-200: hsla(220, 1%, 100%, 0.15);
+	--color--white-alpha-300: hsla(220, 1%, 100%, 0.2);
+	--color--white-alpha-400: hsla(220, 1%, 100%, 0.25);
+	--color--white-alpha-500: hsla(220, 1%, 100%, 0.3);
+	--color--white-alpha-600: hsla(220, 1%, 100%, 0.4);
+	--color--white-alpha-700: hsla(220, 1%, 100%, 0.5);
+	--color--white-alpha-800: hsla(220, 1%, 100%, 0.7);
+	--color--white-alpha-900: hsla(220, 1%, 100%, 0.9);
 
 	// Orange
 	--color--orange-50: hsl(7, 100%, 98%);
