renamed green light color.

--- a/packages/frontend/@n8n/design-system/src/css/_primitives.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_primitives.scss
@@ -99,16 +99,16 @@
 	--color--green-alpha-100: hsl(147, 60%, 36%, 0.15);
 	--color--green-alpha-200: hsl(147, 60%, 36%, 0.25);
 
-	// GreeLight
-	--color--green-light-100: hsl(147, 83%, 90%);
-	--color--green-light-200: hsl(147, 83%, 80%);
-	--color--green-light-300: hsl(147, 83%, 70%);
-	--color--green-light-400: hsl(147, 83%, 60%);
-	--color--green-light-500: hsl(147, 83%, 50%);
-	--color--green-light-600: hsl(147, 83%, 44%);
-	--color--green-light-700: hsl(147, 83%, 30%);
-	--color--green-light-800: hsl(147, 83%, 20%);
-	--color--green-light-900: hsl(147, 83%, 10%);
+	// Mint
+	--color--mint-100: hsl(147, 83%, 90%);
+	--color--mint-200: hsl(147, 83%, 80%);
+	--color--mint-300: hsl(147, 83%, 70%);
+	--color--mint-400: hsl(147, 83%, 60%);
+	--color--mint-500: hsl(147, 83%, 50%);
+	--color--mint-600: hsl(147, 83%, 44%);
+	--color--mint-700: hsl(147, 83%, 30%);
+	--color--mint-800: hsl(147, 83%, 20%);
+	--color--mint-900: hsl(147, 83%, 10%);
 
 	// Red
 	--color--red-50: hsl(356, 83%, 97%);
