--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -500,7 +500,7 @@
 
 	// Switch (Activation, boolean)
 	--switch--color--background: var(--color--gray-400);
-	--switch--color--background--active: var(--color--green-light-600);
+	--switch--color--background--active: var(--color--mint-600);
 	--switch--border-color: transparent;
 	--switch--toggle--color: var(--color--gray-white);
 
