WIP: Collection overhaul

--- a/packages/frontend/@n8n/design-system/src/css/_tokens.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.scss
@@ -745,6 +745,116 @@
 
 	--command-bar-item--color--background--hover: var(--color--background);
 	--command-bar--shadow: 0 15px 45px 0 hsla(0, 0%, 0%, 0.13), 0 5px 10px 0 hsla(0, 0%, 0%, 0.08);
+
+	// Animation
+	--animation--duration: 0.3s;
+	--animation--duration--snappy: 0.2s;
+	--animation--duration--spring: 0.6s;
+	--animation--duration--spring--snappy: 0.5s;
+	// generated using https://animejs.com/easing-editor/spring/default mode:perceived bounce:0.2
+	--animation--easing--spring: linear(
+		0,
+		0.0107,
+		0.0395,
+		0.0818,
+		0.1339,
+		0.1925,
+		0.2551,
+		0.3195,
+		0.3839,
+		0.4471,
+		0.508,
+		0.5658,
+		0.6201,
+		0.6704,
+		0.7167,
+		0.7587,
+		0.7966,
+		0.8305,
+		0.8606,
+		0.887,
+		0.91,
+		0.9299,
+		0.9469,
+		0.9614,
+		0.9735,
+		0.9835,
+		0.9917,
+		0.9983,
+		1.0035,
+		1.0075,
+		1.0105,
+		1.0126,
+		1.014,
+		1.0148,
+		1.0151,
+		1.0151,
+		1.0147,
+		1.0142,
+		1.0134,
+		1.0126,
+		1.0116,
+		1.0106,
+		1.0097,
+		1.0087,
+		1.0078,
+		1.0069,
+		1.006,
+		1.0052,
+		1.0045,
+		1.0039,
+		1.0033,
+		1.0027,
+		1.0023,
+		1.0018,
+		1.0015,
+		1.0012,
+		1.0009,
+		1.0007,
+		1.0005,
+		1.0003,
+		1.0002,
+		1.0001,
+		1,
+		0.9999,
+		0.9999,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9998,
+		0.9999,
+		0.9999,
+		0.9999,
+		0.9999,
+		0.9999,
+		0.9999,
+		0.9999,
+		0.9999,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1,
+		1
+	);
 }
 
 :root {
