support white icon for dark theme

--- a/packages/frontend/@n8n/design-system/src/css/_primitives-dark-diff.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_primitives-dark-diff.scss
@@ -56,6 +56,8 @@
 	--color-button-primary-disabled-font: var(--p--color--white-a-075);
 	--color-button-primary-disabled-border: var(--p--color--primary-120);
 	--color-button-primary-disabled-background: var(--p--color--primary-120);
+
+	--color--logo--fill-color: var(--p--color--white);
 }
 
 body[data-theme='dark'] {
