--- a/packages/frontend/@n8n/design-system/src/css/_primitives.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_primitives.scss
@@ -30,23 +30,45 @@
 	--color--black-alpha-900: hsl(220, 1%, 0%, 0.95);
 
 	// Gray
-	--color--gray-white: hsl(220, 1%, 100%);
-	--color--gray-50: hsl(220, 50%, 99%);
-	--color--gray-100: hsl(220, 43%, 97.5%);
-	--color--gray-125: hsl(220, 43%, 96%);
-	--color--gray-150: hsl(220, 32%, 93%);
-	--color--gray-200: hsl(220, 25%, 88%);
-	--color--gray-250: hsl(220, 18%, 80%);
-	--color--gray-300: hsl(220, 10%, 68%);
-	--color--gray-400: hsl(220, 4%, 58%);
-	--color--gray-500: hsl(220, 4%, 51%);
-	--color--gray-600: hsl(220, 3%, 46%);
-	--color--gray-700: hsl(220, 2%, 33%);
-	--color--gray-800: hsl(220, 2%, 29%);
-	--color--gray-850: hsl(220, 2%, 26%);
-	--color--gray-900: hsl(220, 1%, 20%);
-	--color--gray-950: hsl(220, 1%, 18%);
-	--color--gray-black: hsl(220, 1%, 0%);
+	/* stylelint-disable-next-line */
+	--gray--hue: 0;
+	/* stylelint-disable-next-line */
+	/* stylelint-disable-next-line */
+	--gray--saturation: 0.75%;
+	/* stylelint-disable-next-line */
+	--color--gray-white: hsl(var(--gray--hue), var(--gray--saturation), 100%);
+	/* stylelint-disable-next-line */
+	--color--gray-50: hsl(var(--gray--hue), var(--gray--saturation), 99%);
+	/* stylelint-disable-next-line */
+	--color--gray-100: hsl(var(--gray--hue), var(--gray--saturation), 97.5%);
+	/* stylelint-disable-next-line */
+	--color--gray-125: hsl(var(--gray--hue), var(--gray--saturation), 96%);
+	/* stylelint-disable-next-line */
+	--color--gray-150: hsl(var(--gray--hue), var(--gray--saturation), 93%);
+	/* stylelint-disable-next-line */
+	--color--gray-200: hsl(var(--gray--hue), var(--gray--saturation), 88%);
+	/* stylelint-disable-next-line */
+	--color--gray-250: hsl(var(--gray--hue), var(--gray--saturation), 80%);
+	/* stylelint-disable-next-line */
+	--color--gray-300: hsl(var(--gray--hue), var(--gray--saturation), 68%);
+	/* stylelint-disable-next-line */
+	--color--gray-400: hsl(var(--gray--hue), var(--gray--saturation), 58%);
+	/* stylelint-disable-next-line */
+	--color--gray-500: hsl(var(--gray--hue), var(--gray--saturation), 51%);
+	/* stylelint-disable-next-line */
+	--color--gray-600: hsl(var(--gray--hue), var(--gray--saturation), 46%);
+	/* stylelint-disable-next-line */
+	--color--gray-700: hsl(var(--gray--hue), var(--gray--saturation), 33%);
+	/* stylelint-disable-next-line */
+	--color--gray-800: hsl(var(--gray--hue), var(--gray--saturation), 29%);
+	/* stylelint-disable-next-line */
+	--color--gray-850: hsl(var(--gray--hue), var(--gray--saturation), 26%);
+	/* stylelint-disable-next-line */
+	--color--gray-900: hsl(var(--gray--hue), var(--gray--saturation), 20%);
+	/* stylelint-disable-next-line */
+	--color--gray-950: hsl(var(--gray--hue), var(--gray--saturation), 18%);
+	/* stylelint-disable-next-line */
+	--color--gray-black: hsl(var(--gray--hue), var(--gray--saturation), 0%);
 
 	--color--gray-150-alpha-100: hsla(220, 32%, 93%, 0.1);
 	--color--gray-300-alpha-100: hsla(220, 10%, 68%, 0.1);
